compiler/tests/language/negative/oopSurfaceRoleCapability/callResolution/middlewareNextMismatch.qn
pub wrongNext(
  ctx: HttpCtx<AuthUser>,
  next: Next<HttpCtx<Session<UserSession>>>
) -> Result<HttpCtx<AuthUser>, IntoHttpError> {
  return ctx.extend.around(ctx, next)
}
